--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,110 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+:root {
+  --main-white: #ffffff;
+  --main-font-color: #181818;
+  --main-login-label-color: #3d3d3d;
+  --main-btn: #4d61fc;
+  --secondary-font-color: #4d61fc;
+  --account-label-color: #414141;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: "Lato", sans-serif;
+  overflow: hidden;
 }
+
+/* login Page */
+
+.bg-container {
+  background-image: url("https://res.cloudinary.com/hire-station/image/upload/v1682419697/docsumo/background.48df26a6085579e09092_s8fhm6.png");
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  color: var(--main-white);
+}
+.login-container {
+  width: 80%;
+  margin: 0 auto;
+  height: 100vh;
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  justify-content: flex-start;
+
+  padding: 5% 0 5% 0;
+  /* align-items: center; */
+}
+.docsumo-image {
+  /* height: 20px; */
+  width: 180px;
+}
+.login-box {
+  /* position: absolute; */
+  /* top: 40%; */
+  margin-top: 5%;
+  align-self: center;
+  width: 35rem;
+  background-color: var(--main-white);
+  color: var(--main-font-color);
+  /* left: 50%; */
+  padding: 2.5rem 3rem;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+.login-label {
+  font-weight: bold;
+  font-size: 1.5rem;
+  /* margin-bottom: 24px; */
+}
+.buttons-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  /* flex */
+  gap: 30px;
+}
+.google-sign-in-button-0auth,
+.microsoft-sign-in-button-0auth {
+  width: 100%;
+  /* border: none; */
+  border-radius: 5px;
+  padding: 15px 19px;
+  background-color: var(--main-white);
+  display: flex;
+  align-items: center;
+  border: solid;
+  border-width: 1px;
+}
+.google-sign-in-button-0auth {
+  border-color: red;
+  /* border-width: 1px; */
+}
+.microsoft-sign-in-button-0auth {
+  border-color: blue;
+}
+.icon {
+  width: 20px;
+}
+.optional-or-label {
+  display: flex;
+  width: 100%;
+  gap: 1rem;
+}
+/* .or-label::before, */
+/* .or-label::after {
+  content: " ";
+  height: 2px;
+  width: 130px;
+  background: red;
+  display: block;
+  top: 50%;
+  right: 0;
+} */
