--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,8 @@
 
 body {
   font-family: "Lato", sans-serif;
-  overflow: hidden;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 /* login Page */
@@ -36,8 +37,9 @@ body {
 }
 .login-container {
   width: 75%;
+  /* min-width: 1000px; */
   margin: 0 auto;
-  height: 100vh;
+  height: 100%;
   display: flex;
 
   flex-direction: row;
@@ -55,7 +57,7 @@ body {
   align-items: center;
 }
 .login-box {
-  width: 34rem;
+  min-width: 34rem;
   background-color: var(--main-white);
   color: var(--main-font-color);
 
@@ -213,4 +215,13 @@ input:focus {
   cursor: pointer;
 
   /* position: absolute; */
+}
+
+/* dashboard */
+
+.dashboard-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
