--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
   --main-hover-blue: #8da2fc;
   --main-light-purple: #c9bdff;
   --main-horizontal-line: #dadbe3;
+  --main-login-submit-purple: #a081fc;
 }
 
 body {
@@ -58,23 +59,29 @@ body {
 }
 .login-box {
   min-width: 34rem;
+  max-width: 34rem;
   background-color: var(--main-white);
   color: var(--main-font-color);
 
-  padding: 3rem 3.5rem;
+  padding: 4rem 3.5rem;
   border-radius: 8px;
   display: flex;
   flex-direction: column;
 }
-.login-label,
+
 .buttons-container,
 .email-container,
 .optional-or-label,
 .login-btn {
-  margin-bottom: 24px;
+  margin-bottom: 1.3rem;
 }
+.buttons-container {
+  margin-top: 1.6rem;
+}
+
 input:focus {
   outline: thin solid var(--main-dark);
+  border-color: var(--main-light-purple) !important;
 }
 .optional-or-label {
   text-align: center;
@@ -178,7 +185,8 @@ input:focus {
   font-size: 0.9rem;
   margin: 10px 0 24px 0;
 }
-.login-btn {
+
+.submit-btn {
   border: none;
   padding: 14px 15px;
   font-size: 16px;
@@ -186,15 +194,51 @@ input:focus {
   color: var(--main-white);
   border-radius: 5px;
   cursor: pointer;
+  outline: none;
+  margin-bottom: 1rem;
 }
-.login-btn:hover {
+
+.submit-btn:hover {
   background-color: var(--main-btn-hover);
+}
+
+.submit-btn:disabled {
+  background: var(--main-login-submit-purple);
+  /* color: var(--account-label-color); */
+  color: #e8e9eb;
+  cursor: default;
+}
+
+.spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation-name: spin;
+  animation-duration: 1300ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.spinner-login {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
 }
 
 .login-SSO-label,
 .sign-up-label {
   color: var(--main-btn);
   font-weight: bold;
+  cursor: pointer;
 }
 .login-SSO-label {
   align-self: center;
@@ -224,4 +268,21 @@ input:focus {
   justify-content: center;
   align-items: center;
   height: 100vh;
+}
+
+.error-container {
+  /* margin-bottom: 1rem; */
+  margin-top: 1rem;
+  font-size: 0.8rem;
+  padding: 0.4rem;
+  border: solid red 1px;
+  border-radius: 5px;
+  background-color: #fceded;
+  color: #c70011;
+}
+
+.input-form-error {
+  font-size: 0.9rem;
+  color: #c70011;
+  margin-top: 0.4rem;
 }
