--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,11 @@
   --main-hover-blue: #8da2fc;
   --main-light-purple: #c9bdff;
   --main-horizontal-line: #dadbe3;
-  --main-login-submit-purple: #a081fc;
+  --main-login-submit-purple: #8c94ff;
+  --main-login-button-disabled-gray: #e8e9eb;
+  --main-red-primary: red;
+  --main-red-secondary: #c70011;
+  --main-error-bg-red: #fceded;
 }
 
 body {
@@ -32,24 +36,24 @@ body {
   background-image: url("https://res.cloudinary.com/hire-station/image/upload/v1682448440/docsumo/new-bg-1_cw64i0.png");
   height: 100vh;
   background-position: center;
+
+  overflow-x: hidden;
   background-repeat: no-repeat;
   background-size: cover;
   color: var(--main-white);
 }
 .login-container {
   width: 75%;
-  /* min-width: 1000px; */
+
   margin: 0 auto;
   height: 100%;
   display: flex;
-
-  flex-direction: row;
+  flex-wrap: wrap;
 
   padding: 4% 0 5% 0;
-  flex-wrap: wrap;
 }
 .docsumo-image {
-  height: 23px;
+  height: 1.6rem;
 }
 .login-box-content {
   width: 100%;
@@ -62,9 +66,8 @@ body {
   max-width: 34rem;
   background-color: var(--main-white);
   color: var(--main-font-color);
-
-  padding: 4rem 3.5rem;
-  border-radius: 8px;
+  padding: 4rem 3.5rem 3.5rem 3.5rem;
+  border-radius: 0.5rem;
   display: flex;
   flex-direction: column;
 }
@@ -86,6 +89,8 @@ input:focus {
 .optional-or-label {
   text-align: center;
   position: relative;
+  color: var(--main-login-label-color);
+  font-size: 14px;
 }
 
 .optional-or-label::before,
@@ -93,8 +98,9 @@ input:focus {
   content: "";
   position: absolute;
   top: 50%;
-  width: 40%;
+  width: 43%;
   height: 0.1px;
+
   background-color: var(--main-horizontal-line);
 }
 .optional-or-label::before {
@@ -109,7 +115,7 @@ input:focus {
   position: relative;
   display: inline-block;
   padding: 0 10px;
-  background-color: white;
+  background-color: var(--main-white);
 }
 .login-label {
   font-weight: bold;
@@ -127,13 +133,14 @@ input:focus {
   width: 100%;
   cursor: pointer;
   border-radius: 5px;
-  padding: 10px 13px;
+  padding: 10px 10px;
   background-color: var(--main-white);
   display: flex;
   align-items: center;
   border: solid;
   border-width: 1px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 4px 0px;
+  font-family: "Inter", sans-serif !important;
 }
 .google-sign-in-button-0auth {
   border-color: var(--main-red);
@@ -204,8 +211,7 @@ input:focus {
 
 .submit-btn:disabled {
   background: var(--main-login-submit-purple);
-  /* color: var(--account-label-color); */
-  color: #e8e9eb;
+  color: var(--main-login-button-disabled-gray);
   cursor: default;
 }
 
@@ -257,11 +263,11 @@ input:focus {
 
   z-index: 10;
   cursor: pointer;
-
-  /* position: absolute; */
 }
 
-/* dashboard */
+/* end of login page */
+
+/* dashboard page */
 
 .dashboard-container {
   display: flex;
@@ -270,19 +276,35 @@ input:focus {
   height: 100vh;
 }
 
+/* end of dashboard page */
 .error-container {
-  /* margin-bottom: 1rem; */
   margin-top: 1rem;
   font-size: 0.8rem;
   padding: 0.4rem;
-  border: solid red 1px;
+  border: solid var(--main-red-primary) 1px;
+
   border-radius: 5px;
-  background-color: #fceded;
-  color: #c70011;
+  background-color: var(--main-error-bg-red);
+  color: var(--main-red-secondary);
 }
 
 .input-form-error {
   font-size: 0.9rem;
-  color: #c70011;
+  color: var(--main-red-secondary);
   margin-top: 0.4rem;
+}
+
+@media screen and (max-width: 1000px) {
+  .login-container {
+    padding-top: 3rem;
+    padding-left: 3rem;
+    flex-wrap: nowrap;
+    min-width: 50rem;
+    /* width: 3rem; */
+  }
+}
+@media screen and (max-width: 480px) {
+  .login-container {
+    padding-top: 3rem;
+  }
 }
